# nordnet-mcp

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/nordnet_mcp/: __init__.py  accounts.py  client.py  config.py  instruments.py  reference.py
tests/: test_accounts.py  test_client.py  test_config.py  test_instruments.py  test_reference.py  test_server.py
