[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nordnet-mcp"
version = "0.1.0"
description = "Read-only MCP server for Nordnet portfolio data"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Haris Pasic" },
]
keywords = ["mcp", "nordnet", "portfolio", "investing", "finance"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "mcp>=1.3.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/harispasic/nordnet-mcp"
Repository = "https://github.com/harispasic/nordnet-mcp"
Issues = "https://github.com/harispasic/nordnet-mcp/issues"

[project.scripts]
nordnet-mcp = "nordnet_mcp:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "pytest-mock>=3.14.0",
    "respx>=0.22.0",
]
